@@ -1,0 +1,3 @@
+create database kahua_test default character set utf8;
+grant all privileges on kahua_test.* to 'kahua_test'@'localhost'
+      identified by 'kahua_secret';;
