@@ -1,0 +1,2 @@
+drop database kahua_test;
+drop user kahua_test;
